[package]
name = "morpho-web2"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "morpho2-server"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
actix-web-lab = "0.17"
actix-files = "0.6"
env_logger = "0.9"
log = "0.4"
uuid = { version = "0.4", features = ["serde", "v4"] }
actix-web = { version = "4", features = ["openssl"] }
openssl = { version = "0.10" }
